# ai4devs-sesion2finished

./: DESIGN.md  README.md
backend/: .env.example  .gitignore  Dockerfile  EJEMPLOS.md  README.md  docker-compose.yml  pyproject.toml  setup.bat  setup.sh  test_api.py
backend/app/: __init__.py  auth.py  main.py  models.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: LoginPage.jsx  WelcomePage.jsx
frontend/src/services/: authService.js
