[tool.poetry]
name = "fastapi-jwt-app"
version = "0.1.0"
description = "FastAPI application with JWT authentication"
authors = ["Developer <dev@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
